0027291: Command File->New crashes Import Export Qt sample on Linux

Crash on Qt 4.8.6 was fixed.